<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMovieActivity"
    android:padding="16dp">
    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:scaleType="fitXY"
        />
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/movies"
        android:textSize="24sp"
        android:layout_toEndOf="@id/img_poster"
        android:background="@color/yellowColor"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:layout_toRightOf="@id/img_poster"
        android:layout_below="@id/txt_title"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_genre"
        android:layout_toRightOf="@id/tv_genre"
        android:layout_below="@id/txt_title"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_toRightOf="@id/img_poster"
        android:layout_below="@id/tv_genre"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_duration"
        android:layout_toRightOf="@id/tv_duration"
        android:layout_below="@id/genre"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_director"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:layout_toRightOf="@id/img_poster"
        android:layout_below="@id/tv_duration"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_director"
        android:layout_toRightOf="@id/tv_director"
        android:layout_below="@id/duration"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:layout_toRightOf="@id/img_poster"
        android:layout_below="@id/tv_director"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_rating"
        android:layout_toRightOf="@id/tv_rating"
        android:layout_below="@id/director"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_release"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/release"
        android:layout_toRightOf="@id/img_poster"
        android:layout_below="@id/tv_rating"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:layout_toRightOf="@id/tv_rating"
        android:layout_below="@id/rating"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_poster"
        android:text="@string/synopsis"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="6sp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:text="@string/lorem"
        android:layout_below="@id/synopsis"
        android:textColor="@android:color/black"
        />
</RelativeLayout>
</ScrollView>